--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
+    //Material Drawer
+    implementation "com.mikepenz:materialdrawer:6.1.2"
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar' //Google Material Icons
+    implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'     //FontAwesome
+
+
+
 }
