--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
 
     //Material Drawer
     implementation "com.mikepenz:materialdrawer:6.1.2"
-    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar' //Google Material Icons
-    implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'     //FontAwesome
-
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+    //Google Material Icons
+    implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'//FontAwesome
 
 
 }
