- Cadastro de eventos funcionando - RecyclerView funcionando com UserId estatico, falta recuperar o extrado id...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
 
-    //Necessário para funcionamento do butterknife
+    //Habilitar recursos do JAVA 8
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
