--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/CustomTheme">
         <activity
-            android:name=".ui.main.MainActivity"
-            android:theme="@style/CustomTheme" />
+            android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.event.EventActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.login.LoginActivity" />
